# points

./: .gitignore  CMakeLists.txt  main.cpp
window/: CMakeLists.txt
window/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  renderarea.cpp  renderarea.hpp
window/ui/: CMakeLists.txt  mainwindow.ui
